--- a/test3/style.css
+++ b/test3/style.css
@@ -1,4 +1,9 @@
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
   background-color: #f5f5f7;
 }
 
@@ -11,11 +16,21 @@ button {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 800px;
+  width: 80%;
+}
+
 .controller {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 90%;
+  gap: 10px;
+  width: 100%;
   margin-bottom: 10px;
 }
 
@@ -23,23 +38,14 @@ button {
   font-weight: 300;
   font-size: 50px;
   color: #999999;
-}
-
-.container {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-top: 8px;
 }
 
 .cardWrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
-  width: 90%;
-  max-width: 800px;
-  margin: 0 auto;
+  width: 100%;
   padding: 20px;
   background-color: white;
   border-radius: 20px;
@@ -49,7 +55,7 @@ button {
 .card {
   aspect-ratio: 1/1;
   width: 100%;
-  perspective: 350px;
+  perspective: 1000px;
   cursor: pointer;
 }
 
@@ -140,4 +146,22 @@ button {
 
 .card-back {
   transform: rotateY(180deg);
+}
+
+@media screen and (max-width: 480px) {
+  .card {
+    perspective: 350px;
+  }
+  .emoji {
+    font-size: 35px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .card {
+    perspective: 350px;
+  }
+  .emoji {
+    font-size: 50px;
+  }
 }
