--- a/test1/style.css
+++ b/test1/style.css
@@ -1,3 +1,9 @@
+@import url('../global.css');
+
+body {
+  background-color: var(--background-color);
+}
+
 .container {
   display: flex;
   gap: 10px;
@@ -15,6 +21,7 @@ button {
 }
 .dropdown-btn {
   border: 1px solid black;
+  box-shadow: var(--box-shadow);
   border-radius: 5px;
   height: 35px;
   cursor: pointer;
@@ -29,6 +36,7 @@ button {
   border: 1px solid black;
   border-radius: 5px;
   gap: 5px;
+  box-shadow: var(--box-shadow);
 }
 .open {
   display: flex;
@@ -38,6 +46,7 @@ button {
   margin: 5px;
   padding: 5px;
   text-align: left;
+  border-radius: 5px;
 }
 .item:hover {
   background-color: rgb(0, 0, 0, 0.2);
