--- a/test3/style.css
+++ b/test3/style.css
@@ -1,10 +1,12 @@
+@import url('../global.css');
+
 body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   margin: 0;
-  background-color: #f5f5f7;
+  background-color: var(--background-color);
 }
 
 button {
@@ -13,7 +15,7 @@ button {
   border-radius: 8px;
   border: none;
   cursor: pointer;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: var(--box-shadow);
 }
 
 .container {
@@ -49,7 +51,7 @@ button {
   padding: 20px;
   background-color: white;
   border-radius: 20px;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  box-shadow: var(--box-shadow);
 }
 
 .card {
@@ -132,7 +134,7 @@ button {
   position: absolute;
   width: 100%;
   height: 100%;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  box-shadow: var(--box-shadow);
   border-radius: 8px;
   backface-visibility: hidden;
   display: flex;
