--- a/test3/style.css
+++ b/test3/style.css
@@ -1,12 +1,10 @@
 @import url('../global.css');
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
   background-color: var(--background-color);
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 button {
@@ -30,20 +28,22 @@ button:disabled {
 
 .container {
   display: flex;
+  flex: 1;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 800px;
-  width: 80%;
+  margin-top: 50px;
+  padding: 20px 0;
+  height: 100%;
 }
 
 .controller {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 10px;
-  width: 100%;
-  margin-bottom: 10px;
+  width: 80vw;
+  max-width: 500px;
+  padding-bottom: 10px;
 }
 
 .timer {
@@ -53,11 +53,12 @@ button:disabled {
   margin-top: 8px;
 }
 
-.cardWrapper {
+.card-wrapper {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
-  width: 100%;
+  width: 80vw;
+  max-width: 500px;
   padding: 20px;
   background-color: white;
   border-radius: 20px;
@@ -67,6 +68,7 @@ button:disabled {
 .card {
   aspect-ratio: 1/1;
   width: 100%;
+  height: 100%;
   perspective: 1000px;
   cursor: pointer;
 }
@@ -141,15 +143,15 @@ button:disabled {
 
 .card-front,
 .card-back {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   width: 100%;
   height: 100%;
   box-shadow: var(--box-shadow);
   border-radius: 8px;
   backface-visibility: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .emoji {
