--- a/header.css
+++ b/header.css
@@ -40,11 +40,10 @@
 }
 
 .gnb .gnb-right {
-  margin: 30px 0 30px 0;
   padding-right: 10px;
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 @media screen and (max-width: 480px) {
@@ -54,6 +53,7 @@
 
   .gnb a {
     padding: 5px;
+    border-radius: 5px;
   }
 
   .gnb .gnb-right {
