--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
   max-width: 800px;
   width: 80%;
   padding: 20px;
