--- a/test3/style.css
+++ b/test3/style.css
@@ -15,6 +15,7 @@ button {
   cursor: pointer;
   box-shadow: var(--box-shadow);
   transition: all ease-in-out 0.2s;
+  text-wrap: nowrap;
 }
 
 button:hover {
@@ -51,6 +52,20 @@ button:disabled {
   font-size: 50px;
   color: #999999;
   margin-top: 8px;
+}
+
+.btn-wrapper {
+  position: relative;
+}
+
+.round {
+  position: absolute;
+  right: 10px;
+  top: -20px;
+  font-weight: 300;
+  color: #999999;
+  font-size: 16px;
+  text-wrap: nowrap;
 }
 
 .card-wrapper {
